# dali-rp2

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.dev.md  README.md  dali-rp2.pyproj  dali-rp2.sln  lychee.toml  mypy.ini  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  etc.md
.github/workflows/: unix_unit_tests.yml  windows_unit_tests.yml
config/: test_config.ini
docs/: configuration_file.md  developer_faq.md  user_faq.md
input/: EUR_USD.csv  test_binance_autoinvest.csv  test_binance_betheth.csv  test_bitbank_deposits.csv  test_bitbank_withdrawals.csv  test_coincheck_buys.csv  test_crypto_com_app.csv  test_manual_extra_intra.csv  test_manual_extra_out.csv  test_manual_in.csv  test_manual_intra.csv  test_minswap.csv  test_ods_rp2_input.ini  test_ods_rp2_input.ods  test_pionex_trades.csv  test_pionex_transfers.csv  test_strike.csv  test_strike_2.csv  test_trezor_alice_btc.csv  test_trezor_bob_btc.csv  test_yoroi.csv
input/golden/: test_crypto_data.config  test_crypto_data.ods  test_fifo_rp2_full_report.ods  test_fifo_tax_report_us.ods  test_lifo_rp2_full_report.ods  test_lifo_tax_report_us.ods
src/dali/: abstract_ccxt_input_plugin.py  abstract_ccxt_pair_converter_plugin.py  abstract_input_plugin.py  abstract_pair_converter_plugin.py  abstract_transaction.py  bfs.py  cache.py  ccxt_pagination.py  config_generator.py  configuration.py  configuration_generator.py  dali_configuration.py  dali_main.py  historical_bar.py  in_transaction.py  intra_transaction.py  logger.py  mapped_graph.py  ods_generator.py  out_transaction.py  transaction_item.py  transaction_manifest.py  transaction_resolver.py
src/dali/data/: template.ods
src/dali/plugin/country/: es.py  generic.py  ie.py  jp.py  us.py
src/dali/plugin/input/csv/: binance.py  binance_com.py  binance_com_supplemental.py  bitbank_supplemental.py  blockfi.py  coinbase.py  coincheck_supplemental.py  crypto_com_app.py  electrum.py  ledger.py  manual.py  nexo.py  pionex.py  strike.py  trezor.py  trezor_old.py  trezor_v2.py  yoroi.py
src/dali/plugin/input/ods/: rp2_input.py
src/dali/plugin/input/rest/: binance_com.py  binance_us.py  bitbank.py  coinbase.py  coinbase_advanced.py  coinbase_pro.py  kraken.py  kucoin_futures.py
src/dali/plugin/pair_converter/: binance.py  ccxt.py  ccxt_binance.py  ccxt_binance_locked.py  ccxt_binance_us.py  ccxt_coinbase_pro.py  ccxt_converter.py  ccxt_exchangerate_host.py  ccxt_fiat_from_csv.py  ccxt_kraken.py  ccxt_kraken_locked.py  coinbase_advanced.py  historic_crypto.py  manual.py
src/dali/plugin/pair_converter/csv/: kraken.py
src/dali/plugin/pair_converter/csv_reader/: kraken_csv_pricing.py
src/dali/plugin/pair_converter/csv_readers/: kraken_csv_pricing.py
src/environments/coinbase_advanced_docker/: Dockerfile
src/stubs/: Historic_Crypto.pyi  ccxt.pyi  pandas.pyi  pytz.pyi
src/stubs/backports/: datetime_fromisoformat.pyi
src/stubs/coinbase/: rest.pyi
src/stubs/ezodf/: __init__.pyi  document.pyi  sheets.pyi  table.pyi
src/stubs/progressbar/: __init__.pyi  widgets.pyi
tests/: conftest.py  ods_diff.py  test_abstract_ccxt_pair_converter.py  test_abstract_pair_converter.py  test_cache.py  test_ccxt_pagination.py  test_crypto_com_app.py  test_historical_bar.py  test_mapped_graph.py  test_ods_output_diff.py  test_plugin_binance_com.py  test_plugin_binance_com_supplemental_csv.py  test_plugin_binance_csv.py  test_plugin_binance_us.py  test_plugin_bitbank_supplemental_csv.py  test_plugin_ccxt.py  test_plugin_ccxt_converter.py  test_plugin_ccxt_exchangerate_host.py  test_plugin_ccxt_fiat_from_csv.py  test_plugin_coinbase.py  test_plugin_coinbase_advanced.py  test_plugin_coinbase_pro.py  test_plugin_coincheck.py  test_plugin_coincheck_supplemental.py  test_plugin_historic_crypto.py  test_plugin_kraken.py  test_plugin_kraken_csv_download.py  test_plugin_ods_rp2_input.py  test_plugin_pionex.py  test_plugin_strike_csv.py  test_plugin_yoroi.py  test_transaction_resolver.py
tests/cassettes/test_plugin_ccxt/: TestCcxtPlugin.test_build_fiat_list.yaml  TestCcxtPlugin.test_get_fiat_exchange_rate.yaml
tests/cassettes/test_plugin_ccxt_exchangerate_host/: exchange_rate_host_symbol_call.yaml
tests/cassettes/test_plugin_coinbase_advanced/: TestHistoricCryptoPlugin.test_granularity_response.yaml
