[metadata]
name = dali-rp2
version = 0.3.20
description = Data loader and input generator for RP2 (https://pypi.org/project/rp2/), the privacy-focused, free, open-source US cryptocurrency tax calculator: DaLI removes the need to manually prepare RP2 input files. Just like RP2, DaLI is also free, open-source and it prioritizes user privacy.
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords = accounting, altcoin, bitcoin, BTC, capital gains, cost basis, crypto, cryptocurrency, data loader, ETH, ethereum, exchange, finance, form 8949, NFT, privacy, wallet, tax
license = Apache License 2.0
author = eprbell
url = https://github.com/eprbell/dali-rp2
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
project_urls =
    Source Code = https://github.com/eprbell/dali-rp2
    Developer Documentation = https://github.com/eprbell/dali-rp2/blob/main/README.dev.md
    User Documentation = https://github.com/eprbell/dali-rp2/blob/main/README.md
    Contact = https://eprbell.github.io/eprbell/about.html

[options]
package_dir =
    = src
packages = find:
install_requires =
    jsonschema>=3.2.0
    pyexcel-ezodf>=0.3.4
    python-dateutil>=2.8.2
    pytz>=2021.3
    requests>=2.26.0
    rp2>=0.9.24
    yfinance>=0.1.70

[options.packages.find]
where = src
include_package_data = True
zip_safe = False
python_requires = >=3.7

[options.package_data]
dali = py.typed
* = *.ods

[options.entry_points]
console_scripts =
    dali = dali.dali_main:input_loader
