[metadata]
name = dali-rp2
version = 0.5.0
description = Data loader and input generator for RP2 (https://pypi.org/project/rp2/), the privacy-focused, free, non-commercial, open-source cryptocurrency tax calculator: DaLI removes the need to manually prepare RP2 input files. Just like RP2, DaLI is also free, open-source and it prioritizes user privacy.
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
keywords = accounting, altcoin, bitcoin, BTC, capital gains, cost basis, crypto, cryptocurrency, data loader, ETH, ethereum, exchange, finance, form 8949, NFT, privacy, wallet, tax
license = Apache License 2.0
author = eprbell
url = https://github.com/eprbell/dali-rp2
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities
    Typing :: Typed
project_urls =
    Source Code = https://github.com/eprbell/dali-rp2
    Developer Documentation = https://github.com/eprbell/dali-rp2/blob/main/README.dev.md
    User Documentation = https://github.com/eprbell/dali-rp2/blob/main/README.md
    Contact = https://eprbell.github.io/eprbell/about.html

[options]
package_dir =
    = src
packages = find:
install_requires =
    Historic-Crypto>=0.1.6
    jsonschema>=3.2.0
    pandas
    pyexcel-ezodf>=0.3.4
    python-dateutil>=2.8.2
    pytz>=2021.3
    requests>=2.26.0
    rp2>=1.0.9

[options.extras_require]
dev =
    autopep8
    bandit
    black
    bumpversion
    flake8
    isort
    mypy
    pep8
    pre-commit
    pylint
    pytest
    pytest-mock
    rope
    types-jsonschema
    types-python-dateutil
    types-requests

[options.packages.find]
where = src
include_package_data = True
zip_safe = False
python_requires = >=3.7

[options.package_data]
dali = py.typed, data/*.ods

[options.entry_points]
console_scripts =
    dali_us = dali.plugin.country.us:dali_entry
